# Image-Shrink

./: README.md  setup.cfg  setup.py
src/image_shrink/: main.py
