[metadata]
name = Image-Shrink
description = Shrink images to your desired size
author = Trigus42
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    image_shrink
install_requires =
    pillow>=9.0.0
    PySide6>=6.0.0
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.package_data]
qbt_hub = py.typed

[flake8]
max-line-length = 160